--- a/app/src/main/res/layout-v23/jobreq_card.xml
+++ b/app/src/main/res/layout-v23/jobreq_card.xml
@@ -1,107 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="@drawable/ripple_effect"
+    android:layout_marginBottom="15sp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingTop="30sp"
+    app:cardCornerRadius="12sp"
     android:background="@color/white"
-    android:layout_marginBottom="10dp"
-    android:padding="10dp">
+    android:foreground="@drawable/ripple_effect"
+    android:orientation="vertical">
 
-    <!-- Job Salary -->
-    <TextView
-        android:id="@+id/tv_priceperclosure"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerInParent="true"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingRight="5dp"
-        android:text="30K"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
-    <!-- Number of Applicants -->
-    <LinearLayout
-        android:id="@+id/applicantsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_submitted"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="S: 0"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv_rejected"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="R: 0"
-                android:textColor="#FF0000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tv_accepted"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text="A: 0"
-                android:textColor="#4CBB17"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <!-- Job Role, Company, Job Place -->
-    <LinearLayout
-        android:id="@+id/jobInfoLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:layout_toEndOf="@id/tv_priceperclosure"
-        android:layout_toStartOf="@id/applicantsTextView"
-        android:orientation="vertical">
+        android:paddingTop="5sp"
+        android:paddingBottom="5sp">
 
-        <TextView
-            android:id="@+id/tv_jobrole"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/jobreq_row1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Job Role"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_gravity="start"/>
+            android:background="@color/white"
+            android:padding="10dp">
 
-        <TextView
-            android:id="@+id/tv_compname"
-            android:layout_width="wrap_content"
+
+            <!-- Number of Applicants -->
+            <LinearLayout
+                android:id="@+id/applicantsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_submitted"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S: 0"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tv_rejected"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="R: 0"
+                        android:textColor="#FF0000"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_accepted"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="A: 0"
+                        android:textColor="#4CBB17"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <!-- Job Role, Company, Job Place -->
+            <LinearLayout
+                android:id="@+id/jobInfoLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:layout_toStartOf="@id/applicantsTextView"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_jobrole"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Job Role"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="start"/>
+
+                <TextView
+                    android:id="@+id/tv_compname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Company"
+                    android:textSize="14sp"
+                    android:layout_gravity="start"/>
+
+                <TextView
+                    android:id="@+id/jobPlaceTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#808080"
+                    android:textSize="12sp"
+                    android:text="Chennai, Tamil Nadu (On-site)"
+                    android:layout_gravity="start"/>
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_below="@+id/jobreq_row1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Company"
-            android:textSize="14sp"
-            android:layout_gravity="start"/>
+            android:paddingStart="10sp"
+            android:paddingEnd="10sp"
+            android:paddingBottom="10sp">
 
-        <TextView
-            android:id="@+id/jobPlaceTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#808080"
-            android:textSize="12sp"
-            android:text="Chennai, Tamil Nadu (On-site)"
-            android:layout_gravity="start"/>
+            <TextView
+                android:id="@+id/tv_priceperclosure"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="10sp"
+                android:text="30K"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
-</RelativeLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:background="#ededed"
+                android:padding="10sp">
+
+                <ImageView
+                    android:layout_width="20sp"
+                    android:layout_height="20sp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/icon_attach">
+                </ImageView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5sp"
+                    android:text="Attach Resume"
+                    android:textSize="12sp">
+                </TextView>
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
+
+
