--- a/app/src/main/res/layout/jobreq_screen.xml
+++ b/app/src/main/res/layout/jobreq_screen.xml
@@ -157,7 +157,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="10dp"
+                android:layout_height="5dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:background="#ededed">
@@ -192,7 +192,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="10dp"
+                android:layout_height="5dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:background="#ededed">
@@ -240,7 +240,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="10dp"
+                android:layout_height="5dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:background="#ededed">
@@ -264,106 +264,202 @@
                     android:text="Your submissions">
                 </TextView>
 
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/ll_submissions"
-                    android:padding="5dp"
-                    android:background="#ededed"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
 
-                    <ProgressBar
-                        android:id="@+id/pg_submissions"
+                    <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:visibility="visible"></ProgressBar>
+                        android:padding="5sp">
 
-                    <LinearLayout
-                        android:id="@+id/ll_submissions_row1"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Submitted: "
-                            android:textSize="18sp"
-                            android:textStyle="bold">
-                        </TextView>
-
-                        <TextView
-                            android:id="@+id/tv_submitted"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:textSize="18sp"
-                            android:textStyle="bold">
-                        </TextView>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ll_submissions_row2"
-                        android:layout_below="@+id/ll_submissions_row1"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone">
-
-                        <LinearLayout
+                        <com.facebook.shimmer.ShimmerFrameLayout
+                            android:id="@+id/shimmer_submitted"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="#dddddd">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/black"
+                                    android:text="Submitted: "
+                                    android:visibility="invisible">
+                                </TextView>
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/black"
+                                    android:text="0"
+                                    android:visibility="invisible">
+                                </TextView>
+
+                            </LinearLayout>
+
+                        </com.facebook.shimmer.ShimmerFrameLayout>
+                        <LinearLayout
+                            android:id="@+id/ll_submitted"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Rejected: "
-                                android:textColor="#FF0000"
                                 android:textSize="18sp"
-                                android:textStyle="bold">
+                                android:textColor="@color/black"
+                                android:text="Submitted: ">
                             </TextView>
+
+                            <TextView
+                                android:id="@+id/tv_submitted"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="18sp"
+                                android:textColor="@color/black"
+                                android:text="0">
+                            </TextView>
+
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5sp">
+
+                        <com.facebook.shimmer.ShimmerFrameLayout
+                            android:id="@+id/shimmer_rejected"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="#dddddd">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="18sp"
+                                    android:textColor="#FF0000"
+                                    android:text="Submitted: "
+                                    android:visibility="invisible">
+                                </TextView>
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/black"
+                                    android:text="0"
+                                    android:visibility="invisible">
+                                </TextView>
+
+                            </LinearLayout>
+
+                        </com.facebook.shimmer.ShimmerFrameLayout>
+                        <LinearLayout
+                            android:id="@+id/ll_rejected"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="18sp"
+                                android:textColor="#FF0000"
+                                android:text="Rejected: ">
+                            </TextView>
+
                             <TextView
                                 android:id="@+id/tv_rejected"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="0"
-                                android:textColor="#FF0000"
                                 android:textSize="18sp"
-                                android:textStyle="bold">
+                                android:textColor="#FF0000"
+                                android:text="0">
                             </TextView>
 
                         </LinearLayout>
 
-                        <LinearLayout
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5sp">
+
+                        <com.facebook.shimmer.ShimmerFrameLayout
+                            android:id="@+id/shimmer_accepted"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="#dddddd">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="18sp"
+                                    android:textColor="#4CBB17"
+                                    android:text="Submitted: "
+                                    android:visibility="invisible">
+                                </TextView>
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="18sp"
+                                    android:textColor="#4CBB17"
+                                    android:text="0"
+                                    android:visibility="invisible">
+                                </TextView>
+
+                            </LinearLayout>
+
+                        </com.facebook.shimmer.ShimmerFrameLayout>
+                        <LinearLayout
+                            android:id="@+id/ll_accepted"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="25dp"
-                                android:text="Accepted: "
-                                android:textColor="#4CBB17"
                                 android:textSize="18sp"
-                                android:textStyle="bold">
+                                android:textColor="#4CBB17"
+                                android:text="Accepted: ">
                             </TextView>
+
                             <TextView
                                 android:id="@+id/tv_accepted"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="0"
-                                android:textColor="#4CBB17"
                                 android:textSize="18sp"
-                                android:textStyle="bold">
+                                android:textColor="#4CBB17"
+                                android:text="0">
                             </TextView>
 
                         </LinearLayout>
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
-                </RelativeLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
