--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -21,25 +21,36 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:text="rexroot"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="40dp" />
 
-            <ImageView
-                android:id="@+id/iv_logout"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+            <androidx.cardview.widget.CardView
+                android:layout_width="60sp"
+                android:layout_height="60sp"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="center"
-                android:src="@drawable/img_profile_avatar_circled" />
+                app:cardCornerRadius="50dp"
+                android:layout_margin="5dp">
+
+                <ImageView
+                    android:id="@+id/iv_myprofile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/img_profile_avatar"
+                    android:background="@color/white"
+                    android:scaleType="centerCrop" />
+
+            </androidx.cardview.widget.CardView>
+
 
         </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/ll_sv_container"
+            android:layout_marginTop="10sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
