--- a/app/src/main/res/layout/myprofile_screen.xml
+++ b/app/src/main/res/layout/myprofile_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -51,11 +52,20 @@
             android:layout_height="wrap_content"
             android:gravity="center">
 
-            <ImageView
-                android:layout_width="120sp"
-                android:layout_height="120sp"
-                android:src="@drawable/img_profile_avatar_circled">
-            </ImageView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="150sp"
+                android:layout_height="150sp"
+                app:cardCornerRadius="100dp">
+
+                <ImageView
+                    android:id="@+id/iv_profileimage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/img_profile_avatar"
+                    android:background="@color/white"
+                    android:scaleType="centerCrop" />
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
